<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="FB_SavePar" Id="{7f395fd4-1648-4e6a-9362-3b5aa9a22d1e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_SavePar
VAR_IN_OUT
	
	motorAix:FB_MotorMovements;
	saveRef:DataSaveModule_EX;
	gStaParSet:ST_StationConfigBase;
	languageswitch:BOOL;
	logOut:printLogModule_EX;
END_VAR
VAR_INPUT
	chinnesename:WSTRING;
	eglishname:	STRING;
	pos1name:WSTRING;
	bigSizeFocPosname:STRING;
	RunVelname:STRING;
	
	saveIndexOffset:INT;
END_VAR
VAR_OUTPUT
	moveerro:BOOL;
	movebusy:BOOL;
	movedone:BOOL;
END_VAR
VAR
	step:INT;
	loadTon:TON;
	loadR_Trig:R_Trig;
	saveTon:TON;
	saveR_Trig:R_Trig;
	wstrShow:WSTRING:="";
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[movedone:=FALSE;
gStaParSet.AixChineseName:=chinnesename;
gStaParSet.AixEnglishName:=eglishname;
gStaParSet.pos1name:=pos1name;
gStaParSet.movetopos1btname:="";
IF gCNErrShow THEN
	gStaParSet.movetopos1btname:=wconcat(gStaParSet.movetopos1btname,"移动到");
ELSE
	gStaParSet.movetopos1btname:=wconcat(gStaParSet.movetopos1btname,"MoveTo");
END_IF

gStaParSet.movetopos1btname:=wconcat(gStaParSet.movetopos1btname,pos1name);

gStaParSet.savepos1btname:="";
IF gCNErrShow THEN
	gStaParSet.savepos1btname:=wconcat(gStaParSet.savepos1btname,"保存");
ELSE
	gStaParSet.savepos1btname:=wconcat(gStaParSet.savepos1btname,"Save");
END_IF
gStaParSet.savepos1btname:=wconcat(gStaParSet.savepos1btname,pos1name);

gStaParSet.AixActPos:=motorAix.Get_ActPos();
gStaParSet.AixActVel:=motorAix.Get_ActVel();
IF languageswitch THEN
	gStaParSet.AixNameShow:=gStaParSet.AixChineseName;
ELSE
	gStaParSet.AixNameShow:=TO_WSTRING(gStaParSet.AixEnglishName);
END_IF
IF gStaParSet.Move_Pos1 THEN
	step:=100;
	gStaParSet.Move_Pos1:=FALSE;
END_IF

saveTon(IN:=gsave, PT:=T#2S, Q=> , ET=> );
saveR_Trig(CLK:=gsave , Q=> );
IF gStaParSet.SavePar THEN
	gStaParSet.Pos1:=motorAix.Get_ActPos();
	wstrShow:=WCONCAT(wstrShow,chinnesename);
	wstrShow:=WCONCAT(wstrShow," ");
	wstrShow:=WCONCAT(wstrShow,TO_WSTRING(gStaParSet.Pos1));
	logOut.append_EX(wstrShow);
	wstrShow:="";
	gStaParSet.SavePar:=FALSE;
END_IF
IF saveR_Trig.Q  THEN 
	saveRef.setLrealValue(gStaParSet.Pos1,1*INT_TO_UDINT(saveIndexOffset)+0);
END_IF
IF saveTon.Q THEN
	gSaveTemp:=TRUE;
	gsave:=FALSE;
END_IF


IF gRead  THEN
	saveRef.getLrealValue(gStaParSet.Pos1,1*INT_TO_UDINT(saveIndexOffset)+0);
END_IF

IF fbMachineState.Reset THEN
	step:=0;
	moveerro:=FALSE;
	gStaParSet.Reset:=FALSE;
	movebusy:=FALSE;
	motorAix.Act_RESET();
END_IF
IF gStaParSet.Stop THEN
	gStaParSet.Stop:=FALSE;
	motorAix.Act_STOP();
	step:=0;
	movebusy:=FALSE;
END_IF

CASE step OF
	0:
		;
	100:
		IF NOT motorAix.Get_Busy() AND motorAix.Get_HomeState() AND motorAix.Get_AbsCondition() THEN
			step:=110;
			movebusy:=TRUE;
			motorAix.Act_ABS(gStaParSet.Pos1,gStaParSet.RunVel);
		ELSE
			step:=300;
		END_IF
	110:
		//新增功能2
		IF motorAix.Get_Done_Abs() THEN
			step:=0;
			movebusy:=FALSE;
		END_IF
		IF motorAix.Get_Error() THEN
			step:=300;
		END_IF
		
	300:
		moveerro:=TRUE;
		step:=0;
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="FB_SavePar">
      <LineId Id="153" Count="0" />
      <LineId Id="82" Count="1" />
      <LineId Id="402" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="486" Count="1" />
      <LineId Id="489" Count="1" />
      <LineId Id="488" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="411" Count="1" />
      <LineId Id="491" Count="1" />
      <LineId Id="494" Count="1" />
      <LineId Id="493" Count="0" />
      <LineId Id="413" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="84" Count="1" />
      <LineId Id="87" Count="8" />
      <LineId Id="254" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="351" Count="1" />
      <LineId Id="450" Count="4" />
      <LineId Id="449" Count="0" />
      <LineId Id="353" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="188" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="257" Count="0" />
      <LineId Id="357" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="222" Count="0" />
      <LineId Id="235" Count="0" />
      <LineId Id="221" Count="0" />
      <LineId Id="157" Count="2" />
      <LineId Id="161" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="418" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="162" Count="0" />
      <LineId Id="164" Count="0" />
      <LineId Id="167" Count="2" />
      <LineId Id="165" Count="0" />
      <LineId Id="105" Count="6" />
      <LineId Id="147" Count="0" />
      <LineId Id="112" Count="3" />
      <LineId Id="117" Count="0" />
      <LineId Id="527" Count="0" />
      <LineId Id="118" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="397" Count="1" />
      <LineId Id="396" Count="0" />
      <LineId Id="134" Count="3" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>